Dicking with divs

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -3,29 +3,23 @@
 <head>
 	<title>Learning CSS</title>
 	<style type="text/css">
-		h1 {
-			color: orange;
-		}
-
-		.big {
-			color: blue;
-			font-size: 200%;
-		}
-
-		.tiny {
-			color: teal;
-			font-size: 50%;
-		}
-
-		#green {
-			color: green;
+		.bluebox {
+			background-color: blue;
+			width: 300px;
+			width: 200px;
 		}
 	</style>
 </head>
 <body>
 	<h1>Learning CSS</h1>
-	<p class="big">This paragraph is blue and big</p>
-	<p class="tiny">This paragraph is teal and tiny</p>
-	<p class="big" id="green">This paragraph is big and green</p>
+<div class="bluebox">
+	<h2>This is inside the Div</h2>
+		<p>I'm inside a div!</p>
+		<p>Yeah me too!</p>
+</div>
+
+<h2>This is outside the div</h2>
+	<p>I'm not like the other reindeer</p>
+</div>
 </body>
 </html>
