--- a/html_css/index.html
+++ b/html_css/index.html
@@ -6,16 +6,12 @@
 		.purplebox {
 			background-color: #7401DF;
 			width: 200px;
-			position: fixed;
-			z-index: 2;
+			margin: 60px 30px 90px;
 		}
 		.redbox {
 			background-color: red;
 			width: 200px;
-			height: 300px;
-			position: relative;
-			left: 100px;
-			z-index: 1;
+			height: 200px;
 		}
 	</style>
 </head>
@@ -29,17 +25,6 @@
 <div class="redbox">
 <h2>This is Red Box div</h2>
 	<p>I'm not like the other reindeer</p>
-</div>
-<div class="redbox">
-<h2>This is Red Box div</h2>
-	<p>I'm not like the other reindeer</p>
-</div>
-<div class="redbox">
-<h2>This is Red Box div</h2>
-	<p>I'm not like the other reindeer</p>
-</div>
-<div class="clear">
-	<p>I'm underneath the floated divs!</p>
 </div>
 </body>
 </html>
